[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Small Circle_03.png" type="Texture" id=1]
[ext_resource path="res://Assets/Small Circle_04.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Circles.gd" type="Script" id=3]

[sub_resource type="StreamTexture" id=1]
flags = 4
load_path = "res://.import/Small Circle_01.png-29c111361bdd62ec95c0611ae4a081a9.stex"

[sub_resource type="StreamTexture" id=2]
flags = 4
load_path = "res://.import/Small Circle_02.png-1c10e42c544bbe3d6d646901aeccd2d9.stex"

[node name="Circles" type="Node2D"]
position = Vector2( 0, -0.857361 )
script = ExtResource( 3 )

[node name="Cyan" type="Area2D" parent="."]
position = Vector2( 0, 1.13206 )

[node name="Sprite" type="Sprite" parent="Cyan"]
position = Vector2( -82.5627, -83.8232 )
texture = SubResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Cyan"]
visible = false
position = Vector2( -82.4659, -84.7823 )
scale = Vector2( 10.0275, 8.33118 )
build_mode = 1
polygon = PoolVector2Array( -4.58811, 10.0449, -8.18702, 10.0449, -8.23565, 7.29375, -7.50614, 3.95719, -6.19303, 0.152339, -4.34495, -3.12568, -1.08648, -6.57932, 3.14466, -9.09637, 6.59766, -9.97441, 8.29984, -9.97441, 8.34848, -5.4086, 7.3758, -5.4086, 5.04138, -4.94031, 2.70696, -4.00373, 1.05341, -2.71593, -0.940578, -0.60863, -2.44823, 1.55721, -3.61544, 4.19133, -4.49085, 7.35229 )

[node name="Yellow" type="Area2D" parent="."]
position = Vector2( 164.932, 1.13206 )

[node name="Sprite" type="Sprite" parent="Yellow"]
position = Vector2( -82.5627, -83.8232 )
texture = SubResource( 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Yellow"]
visible = false
position = Vector2( -82.4659, -84.7823 )
rotation = 1.5708
scale = Vector2( 10.0275, 8.33118 )
build_mode = 1
polygon = PoolVector2Array( -4.58811, 10.0449, -8.18702, 10.0449, -8.23565, 7.29375, -7.50614, 3.95719, -6.19303, 0.152339, -4.34495, -3.12568, -1.08648, -6.57932, 3.14466, -9.09637, 6.59766, -9.97441, 8.29984, -9.97441, 8.34848, -5.4086, 7.3758, -5.4086, 5.04138, -4.94031, 2.70696, -4.00373, 1.05341, -2.71593, -0.940578, -0.60863, -2.44823, 1.55721, -3.61544, 4.19133, -4.49085, 7.35229 )

[node name="Magenta" type="Area2D" parent="."]
position = Vector2( 0, 166.064 )

[node name="Sprite" type="Sprite" parent="Magenta"]
position = Vector2( -82.5627, -83.8232 )
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Magenta"]
visible = false
position = Vector2( -82.4659, -84.7823 )
rotation = -1.5708
scale = Vector2( 10.0275, 8.33118 )
build_mode = 1
polygon = PoolVector2Array( -4.58811, 10.0449, -8.18702, 10.0449, -8.23565, 7.29375, -7.50614, 3.95719, -6.19303, 0.152339, -4.34495, -3.12568, -1.08648, -6.57932, 3.14466, -9.09637, 6.59766, -9.97441, 8.29984, -9.97441, 8.34848, -5.4086, 7.3758, -5.4086, 5.04138, -4.94031, 2.70696, -4.00373, 1.05341, -2.71593, -0.940578, -0.60863, -2.44823, 1.55721, -3.61544, 4.19133, -4.49085, 7.35229 )

[node name="Purple" type="Area2D" parent="."]
position = Vector2( 164.932, 166.527 )

[node name="Sprite" type="Sprite" parent="Purple"]
position = Vector2( -82.5627, -83.8232 )
texture = ExtResource( 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Purple"]
visible = false
position = Vector2( -82.4659, -84.7823 )
rotation = 3.14159
scale = Vector2( 10.0275, 8.33118 )
build_mode = 1
polygon = PoolVector2Array( -4.58811, 10.0449, -8.18702, 10.0449, -8.23565, 7.29375, -7.50614, 3.95719, -6.19303, 0.152339, -4.34495, -3.12568, -1.08648, -6.57932, 3.14466, -9.09637, 6.59766, -9.97441, 8.29984, -9.97441, 8.34848, -5.4086, 7.3758, -5.4086, 5.04138, -4.94031, 2.70696, -4.00373, 1.05341, -2.71593, -0.940578, -0.60863, -2.44823, 1.55721, -3.61544, 4.19133, -4.49085, 7.35229 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="SelfDestruct" type="Timer" parent="."]
wait_time = 5.0
[connection signal="body_entered" from="Cyan" to="." method="_on_Cyan_body_entered"]
[connection signal="body_entered" from="Yellow" to="." method="_on_Yellow_body_entered"]
[connection signal="body_entered" from="Magenta" to="." method="_on_Magenta_body_entered"]
[connection signal="body_entered" from="Purple" to="." method="_on_Purple_body_entered"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="SelfDestruct" to="." method="_on_SelfDestruct_timeout"]
